force-app/main/default/objects/WhatsApp_Feedback__c/WhatsApp_Feedback__c.object-meta.xml
<CustomObject>
    <label>WhatsApp Feedback</label>
    <nameField>
        <displayFormat>WF-{00000}</displayFormat>
        <label>WhatsApp Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WhatsApp Feedbacks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>