force-app/main/default/objects/WhatsApp_Feedback__c/fields/Answer_11__c.field-meta.xml
<CustomField>
    <fullName>Answer_11__c</fullName>
    <label>Answer 11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>