force-app/main/default/objects/WhatsApp_Feedback__c/fields/Answer_12__c.field-meta.xml
<CustomField>
    <fullName>Answer_12__c</fullName>
    <label>Answer 12</label>
    <length>255</length>
    <type>Text</type>
</CustomField>