force-app/main/default/objects/WhatsApp_Feedback__c/fields/Answer_19_1__c.field-meta.xml
<CustomField>
    <fullName>Answer_19_1__c</fullName>
    <label>Answer 19</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>