force-app/main/default/objects/WhatsApp_Feedback__c/fields/Camp_Answer_12__c.field-meta.xml
<CustomField>
    <fullName>Camp_Answer_12__c</fullName>
    <label>Camp Answer 12</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>