force-app/main/default/objects/WhatsApp_Feedback__c/fields/Camp_NPS__c.field-meta.xml
<CustomField>
    <fullName>Camp_NPS__c</fullName>
    <label>Camp NPS</label>
    <length>10</length>
    <type>Text</type>
</CustomField>