force-app/main/default/objects/WhatsApp_Feedback__c/fields/Camp_Question_11__c.field-meta.xml
<CustomField>
    <fullName>Camp_Question_11__c</fullName>
    <label>Camp Question 11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>