force-app/main/default/objects/WhatsApp_Feedback__c/fields/Camp_Question_12__c.field-meta.xml
<CustomField>
    <fullName>Camp_Question_12__c</fullName>
    <label>Camp Question 12</label>
    <length>255</length>
    <type>Text</type>
</CustomField>