force-app/main/default/objects/WhatsApp_Feedback__c/fields/Feedback_Date__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Date__c</fullName>
    <formula>DATEVALUE( CreatedDate )</formula>
    <label>Feedback Date</label>
    <type>Date</type>
</CustomField>