force-app/main/default/objects/WhatsApp_Feedback__c/fields/Feedback_Type__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Type__c</fullName>
    <label>Feedback Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>End of Bot conversation</fullName>
            </value>
            <value>
                <fullName>Case Closure</fullName>
            </value>
            <value>
                <fullName>Call Disposition</fullName>
            </value>
            <value>
                <fullName>Day of Registration</fullName>
            </value>
            <value>
                <fullName>Day of Possession Handover</fullName>
            </value>
            <value>
                <fullName>Post Possession Handover</fullName>
            </value>
            <value>
                <fullName>Generic Feedback</fullName>
            </value>
            <value>
                <fullName>Sales Experience</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>