force-app/main/default/objects/WhatsApp_Feedback__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <formula>(&quot;XXXXX&quot;&amp;right(Mobile_Number__c,5))</formula>
    <label>Mobile</label>
    <type>Text</type>
</CustomField>