force-app/main/default/objects/WhatsApp_Feedback__c/fields/NPS1__c.field-meta.xml
<CustomField>
    <fullName>NPS1__c</fullName>
    <formula>NPS__c</formula>
    <label>NPS</label>
    <type>Text</type>
</CustomField>