force-app/main/default/objects/WhatsApp_Feedback__c/fields/Post_Possession_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Post_Possession_Frequency__c</fullName>
    <label>Post Possession Frequency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>