force-app/main/default/objects/WhatsApp_Feedback__c/fields/Project_Name_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Project_Name_Sharing__c</fullName>
    <label>Project Name Sharing</label>
    <length>100</length>
    <type>Text</type>
</CustomField>