force-app/main/default/objects/WhatsApp_Feedback__c/fields/Question_10__c.field-meta.xml
<CustomField>
    <fullName>Question_10__c</fullName>
    <label>Question 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>