force-app/main/default/objects/WhatsApp_Feedback__c/fields/Question_11__c.field-meta.xml
<CustomField>
    <fullName>Question_11__c</fullName>
    <label>Question 11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>