force-app/main/default/objects/WhatsApp_Feedback__c/fields/Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Date__c</fullName>
    <formula>IF( ISPICKVAL(Feedback_Type__c , &apos;Day of Registration&apos;),  DATEVALUE(CreatedDate), null)</formula>
    <label>Registration Date</label>
    <type>Date</type>
</CustomField>