force-app/main/default/objects/WhatsApp_Feedback__c/fields/Sales_Experience_Answer_3__c.field-meta.xml
<CustomField>
    <fullName>Sales_Experience_Answer_3__c</fullName>
    <label>Sales Experience Answer 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>