force-app/main/default/objects/WhatsApp_Feedback__c/fields/Sales_Experience_Question_4__c.field-meta.xml
<CustomField>
    <fullName>Sales_Experience_Question_4__c</fullName>
    <label>Sales Experience Question 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>