force-app/main/default/objects/WhatsApp_Feedback__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Feedback_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Question_Set__c</columns>
    <columns>Opportunity_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>